tests/semantic/fail/function-wrong-arg-type.tiger
let function f(x : int) : int = 0 in f("a") end
